k8s/tenants/tenant-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployaz-tenant-b
  namespace: deployaz-tenant-b
  labels:
    app: deployaz-tenant-b
spec:
  selector:
    app: deployaz-tenant-b
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: management
      port: 8081
      targetPort: 8081
  type: ClusterIP
