k8s/tenants/tenant-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployaz-tenant-b
  namespace: deployaz-tenant-b
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: tenant-b.deployaz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deployaz-tenant-b
                port:
                  number: 80
